Web page using html HW-3

--- a/signup.html
+++ b/signup.html
@@ -6,12 +6,13 @@
 	</head>
 	<body>
 
+
 		<div id="menu">
 			<ul>
 				<a href="Home page/aminur.html"> <li>Home</li> </a>
 				<a href="success.html"> <li>Contract</li> </a>
 				<a href="login.html"> <li>login</li> </a>
-				<a href="signup.html"> <li>Signup</li> </a>
+				<a href="register2.html"> <li>Register</li> </a>
 				<a href="booking.html"> <li>Menu</li> </a>
 
 			</ul>
@@ -44,16 +45,16 @@
 								<option id="" value="BUET"> BUET</option>
 								<option id="" value="Duet"> DUET</option>
 								<option id="" value="Da"> Dhaka university</option>
-							</select>
-
+							</select><br>
 							<input type="submit" value="Submit">
+
 
 
 			</form>
 		</div>
-
 		<footer>
 				Copy right @ shamima
 		</footer>
+
 	</body>
 </html>
