Web page using bootstrap and css html js. HW-4

--- a/menu.html
+++ b/menu.html
@@ -10,12 +10,11 @@
 <body>
 
 <div class="container">
-
     <div class="row">
     <div class="col-sm-12 bg-danger">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Shamima</a>
+    <a class="navbar-brand" href="#">Logo</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,8 +37,12 @@
   </div>
 </nav>
 </div>
+<div class="row">
+    <div class="col-sm-12 text-danger bg-info">
+    <img src="images\1.PNG " width="100%" height="150px">
     </div>
-
+  </div>
+    </div>
     <div class="row">
     <div class="col-sm-4 bg-info">
 	<img src="images\3.PNG " width="100%" height="500px">
@@ -53,7 +56,7 @@
 
 
 
-      <div class="col-sm-12 text-danger bg-dark">Copy right 54th eve@ batch Shamima Najnin </div>
+      <div class="col-sm-12 text-danger bg-dark">Copy right @ batch </div>
     </div>
 </div>
 
